2025-05 Feature Update for Version 2505 (5.0.7a)

--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -155,8 +155,8 @@
     </div>
   </section>
 
-  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="iu-img"
-    style="background-image: url(img/iu-light.png)">
+  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="cd-img"
+    style="background-image: url(img/cdbus-light.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -239,6 +239,11 @@
             </figcaption>
           </div>
 
+          <video id="eicw-vid9" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop
+            playsinline width="100%" class="column-vid" style="margin-top: 2em;">
+            <source src="img/eicw-vid9-light.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
     </div>
