--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -141,12 +141,12 @@
                 </div>
               </div>
               <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
-                <a href="#iu-img">
+                <a href="#cd-img">
                   <button class="btn">Customized Designs</button>
                 </a>
-                <a href="#postface">
+                <!-- <a href="#postface">
                   <button class="btn">Postface</button>
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
