--- a/blog.html
+++ b/blog.html
@@ -55,8 +55,11 @@
             <a href="./works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
             <a href="eicw/eicw.html" class="nav-item">EICW</a>
             <a href="#" class="nav-item active">Blog</a>
-            <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-                    title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+            <a href="#" class="nav-item">
+                <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
+                    <i class="fa-solid fa-moon" id="theme-icon"></i>
+                </button>
+            </a>
         </nav>
     </header>
 
