--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -59,8 +59,11 @@
       <a href="../works-by-nrfz.html" class="nav-item active">Works By NRFZ</a>
       <a href="../eicw/eicw.html" class="nav-item">EICW</a>
       <a href="../blog.html" class="nav-item">Blog</a>
-      <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-          title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+      <a href="#" class="nav-item">
+        <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
+          <i class="fa-solid fa-moon" id="theme-icon"></i>
+        </button>
+      </a>
     </nav>
   </header>
 
@@ -239,7 +242,10 @@
     // Check localStorage for dark mode preference
     if (localStorage.getItem('dark-mode') === 'enabled') {
       document.body.classList.add('dark-mode');
+      updateThemeIcon('dark');
       updateHrefForDarkMode();
+    } else {
+      updateThemeIcon('light');
     }
 
     const toggleButton = document.getElementById('dark-mode-toggle');
@@ -248,11 +254,25 @@
       // Save the preference in localStorage
       if (document.body.classList.contains('dark-mode')) {
         localStorage.setItem('dark-mode', 'enabled');
+        updateThemeIcon('dark');
       } else {
         localStorage.setItem('dark-mode', 'disabled');
+        updateThemeIcon('light');
       }
       updateHrefForDarkMode();
     });
+
+    // Function to update the theme icon
+    function updateThemeIcon(theme) {
+      const themeIcon = document.getElementById('theme-icon');
+      if (theme === 'dark') {
+        themeIcon.classList.remove('fa-sun');
+        themeIcon.classList.add('fa-moon');
+      } else {
+        themeIcon.classList.remove('fa-moon');
+        themeIcon.classList.add('fa-sun');
+      }
+    }
 
     function updateHrefForDarkMode() {
       /* Banners */
