2025-05 Feature Update for Version 2505 (5.0.9a)

--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -61,8 +61,11 @@
       <a href="../works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
       <a href="eicw.html" class="nav-item active">EICW</a>
       <a href="../blog.html" class="nav-item">Blog</a>
-      <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-          title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+      <a href="#" class="nav-item">
+        <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
+          <i class="fa-solid fa-moon" id="theme-icon"></i>
+        </button>
+      </a>
     </nav>
   </header>
 
@@ -290,8 +293,7 @@
 
         <div class="banner-eicw">
           <figcaption>
-            <a href="img/psr5a-light.png" id="psr5a"
-              class="portfolio-img ">
+            <a href="img/psr5a-light.png" id="psr5a" class="portfolio-img ">
               <img src="img/psr5a-light.png" id="psr5a-img" class="img-fluid cp-img" alt="psr5a"
                 style="margin-bottom: 0em;">
             </a>
