--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -62,8 +62,11 @@
             <a href="../works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
             <a href="eicw.html" class="nav-item active">EICW</a>
             <a href="../blog.html" class="nav-item">Blog</a>
-            <a href="#" class="nav-item"><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
-                    title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button></a>
+            <a href="#" class="nav-item">
+                <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
+                    <i class="fa-solid fa-moon" id="theme-icon"></i>
+                </button>
+            </a>
         </nav>
     </header>
 
