--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" href="../img/core-img/favicon.png">
 
-     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/style-breakpoints.css">
@@ -107,16 +107,16 @@
                             <button class="btn">Improving Existing Wayfinding Designs.</button>
                         </a>
                         <a href="#">
-                            <button class="btn">Let's get more experimental!</button>
+                            <button class="btn">Enhancing Clarity & Fine-Tunes</button>
                         </a>
                         <a href="eicw-3.html">
-                            <button class="btn">Showcasing my own ideas.</button>
+                            <button class="btn">Showcasing My Own Ideas.</button>
                         </a>
                         <a href="eicw-4.html">
-                            <button class="btn">CCL6 and the way forward.</button>
+                            <button class="btn">CCL6 & The Way Forward.</button>
                         </a>
                         <a href="eicw-5.html">
-                            <button class="btn">The Buses' side of things needs love too!</button>
+                            <button class="btn">Redesigning The Buses' Side Of Things</button>
                         </a>
                     </div>
                 </div>
@@ -285,6 +285,21 @@
                                                         href="https://www.skyscrapercity.com/cdn-cgi/image/format=auto,onerror=redirect,width=1920,height=1920,fit=scale-down/https://www.skyscrapercity.com/attachments/img_2128-jpeg.7437489/">
                                                         Skyscrapercity </a>
                                                 </p>
+                                            </figcaption>
+                                        </div>
+
+                                        <p style="text-align: left;">For the MRT/LRT icons, the main MRT/LRT line that
+                                            exit
+                                            serves, takes precedence (e.g If Exit 5 serves the Bukit Panjang LRT, the
+                                            caplets will reflect the LRT's colour)
+                                        </p>
+
+                                        <div class="column column-pic">
+                                            <figcaption>
+                                                <a href="img/ic4-light.png" id="ic4" class="portfolio-img">
+                                                    <img src="img/ic4-light.png" id="ic4-img" class="img-fluid cp-img"
+                                                        alt="ic4">
+                                                </a>
                                             </figcaption>
                                         </div>
 
