--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -107,16 +107,16 @@
               <button class="btn">Improving Existing Wayfinding Designs.</button>
             </a>
             <a href="eicw-2.html">
-              <button class="btn">Let's get more experimental!</button>
+              <button class="btn">Enhancing Clarity & Fine-Tunes</button>
             </a>
             <a href="#">
-              <button class="btn">Showcasing my own ideas.</button>
+              <button class="btn">Showcasing My Own Ideas.</button>
             </a>
             <a href="eicw-4.html">
-              <button class="btn">CCL6 and the way forward.</button>
+              <button class="btn">CCL6 & The Way Forward.</button>
             </a>
             <a href="eicw-5.html">
-              <button class="btn">The Buses' side of things needs love too!</button>
+              <button class="btn">Redesigning The Buses' Side Of Things</button>
             </a>
           </div>
         </div>
