2025-05 Feature Update for Version 2505 (5.0.10a)

--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -190,7 +190,7 @@
               <h3 style="font-size: 30px; font-weight: bold; margin-top: 2em;"><i
                   class="fa-solid fa-location-dot"></i>&nbsp; Pasir Ris ITH</h3>
 
-              <h3 style="font-size: 25px; font-weight: bold; margin-top: 2em;"><u>Overhead Signages</u></h3>
+              <h3 style="font-size: 25px; font-weight: bold; margin-top: 2em;"><u>Overhead/Wall Signages</u></h3>
 
               <p style="text-align: left;"> Let's take the newly opened Integrated Transport Hub (ITH) at Pasir Ris as
                 an example. While it has already adopted the current wayfnding systems, the implementation, in my
@@ -303,12 +303,18 @@
           </figcaption>
         </div>
 
+        <br>
+
+        <p>The MRT caplet on the current signage, (the one in blue) might confuse commuters. Usually, a blue coloured caplets
+          meant that thev MRT line it is bringing the commuters to, is the Downtown Line. To reduce confusion, I have
+          decided to replace it with the MRT caplets (my redesigned version) shown on Station Entrances.</p>
+
         <hr>
       </div>
     </div>
   </section>
 
-  <!--  -->
+
 
 
   <!-- Author -->
