2025-05 Feature Update for Version 2505 (5.0.10)

--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -305,7 +305,8 @@
 
         <br>
 
-        <p>The MRT caplet on the current signage, (the one in blue) might confuse commuters. Usually, a blue coloured caplets
+        <p>The MRT caplet on the current signage, (the one in blue) might confuse commuters. Usually, a blue coloured
+          caplets
           meant that the MRT line it is bringing the commuters to, is the Downtown Line. To reduce confusion, I have
           decided to replace it with the MRT caplets (my redesigned version) shown on Station Entrances.</p>
 
@@ -383,9 +384,9 @@
             </figcaption>
           </div>
 
-          <video id="eicw-vid9" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop
+          <video id="eicw-vid10" autoplay controls controlsList="nodownload" oncontextmenu="return false;" muted loop
             playsinline width="100%" class="column-vid" style="margin-top: 2em;">
-            <source src="img/eicw-vid9-light.mp4" type="video/mp4">
+            <source src="img/eicw-vid10-light.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -394,48 +395,37 @@
 
         <p>Let's take a look at the Interchange Name signages implemented at the Pasir Ris ITH.</p>
 
+        <p>The design system used here is the ones designed by <a
+            href="https://www.transportdesign.com/projects/singapore-connecting-a-city">TDC</a>. Hence, I will be
+          switching over to the new design system, but using my changes.</p>
+
         <div class="row wow fadeInUp" data-wow-delay="100ms">
           <div class="column column-pic">
             <figcaption>
-              <a href="img/psr3.jpg" id="psr3" class="portfolio-img ">
-                <img src="img/psr3.jpg" id="psr3-img" class="img-fluid cp-img" alt="psr3">
+              <a href="img/cck3.png" id="cck3" class="portfolio-img ">
+                <img src="img/cck3.png" id="cck3-img" class="img-fluid cp-img" alt="cck3">
               </a>
               <p style="text-align: center;">Current Implementation <br> 📸: Land Transport Guru</p>
             </figcaption>
           </div>
           <div class="column column-pic">
             <figcaption>
-              <a href="img/psr-3a-light.png" id="psr3a" class="portfolio-img ">
-                <img src="img/psr-3a-light.png" id="psr3a-img" class="img-fluid cp-img" alt="psr3a">
+              <a href="img/cck-3a-light.png" id="cck3a" class="portfolio-img ">
+                <img src="img/cck-3a-light.png" id="cck3a-img" class="img-fluid cp-img" alt="cck3a">
               </a>
               <p style="text-align: center;">Current Implementation - Recreated</p>
             </figcaption>
           </div>
         </div>
 
-        <p>The design implemented here is very inconsistent and weird. The caplets were weirdly scaled, and the weird
-          duplication of caplets (the yellow SG icon itself were used on the previous Design
-          System, and the new Bus Icon were used on the new Design System) makes it look awkward.</p>
-
-        <div class="row wow fadeInUp" data-wow-delay="100ms">
-          <div class="column column-pic">
-            <figcaption>
-              <a href="img/psr-3b-light.png" id="psr3b" class="portfolio-img ">
-                <img src="img/psr-3b-light.png" id="psr3b-img" class="img-fluid cp-img" alt="psr3b">
-              </a>
-              <p style="text-align: center;">Interchange Name signage with the old design system</p>
-            </figcaption>
-          </div>
-        </div>
-
-        <p>Hence I've decided to redesign and make the design more consistent. As mentioned in the <a
-            href="eicw-2.html">second page</a>, I have decided to only stick with just the Dark Grey colour across all
-          signages.</p>
+        <p>The older design system lacked Overhead signages near/at the respective Exits. The new system already has
+          these, as seen in Pasir Ris ITH. Hence, I'll be bringing those elements over to Choa Chu Kang Bus Int as well.
+        </p>
 
         <div class="banner-eicw">
           <figcaption>
-            <a href="img/psr5a-light.png" id="psr5a" class="portfolio-img ">
-              <img src="img/psr5a-light.png" id="psr5a-img" class="img-fluid cp-img" alt="psr5a"
+            <a href="img/cck4a-light.png" id="cck4a" class="portfolio-img ">
+              <img src="img/cck4a-light.png" id="cck4a-img" class="img-fluid cp-img" alt="cck4a"
                 style="margin-bottom: 0em;">
             </a>
           </figcaption>
