--- a/index copy.html
+++ b/index copy.html
@@ -107,7 +107,7 @@
             </div>
 
             <!-- NSL -->
-            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+            <div class="col-xl-4 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
                 <div class="card card-nsl border-nsl h-100 py-2">
                     <div class="card-body card-body-nsl">
                         <div class="row no-gutters align-items-center">
@@ -133,7 +133,7 @@
             </div>
 
             <!-- EWL -->
-            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+            <div class="col-xl-4 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
                 <div class="card card-ewl border-ewl h-100 py-2">
                     <div class="card-body card-body-ewl">
                         <div class="row no-gutters align-items-center">
@@ -159,7 +159,7 @@
             </div>
 
             <!-- NEL -->
-            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+            <div class="col-xl-4 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
                 <div class="card card-nel border-nel h-100 py-2">
                     <div class="card-body card-body-nel">
                         <div class="row no-gutters align-items-center">
@@ -185,7 +185,7 @@
             </div>
 
             <!-- CCL -->
-            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+            <div class="col-xl-4 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
                 <div class="card card-ccl border-ccl h-100 py-2">
                     <div class="card-body card-body-ccl">
                         <div class="row no-gutters align-items-center">
@@ -211,7 +211,7 @@
             </div>
 
             <!-- DTL -->
-            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+            <div class="col-xl-4 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
                 <div class="card card-dtl border-dtl h-100 py-2">
                     <div class="card-body card-body-dtl">
                         <div class="row no-gutters align-items-center">
@@ -237,7 +237,7 @@
             </div>
 
             <!-- TEL -->
-            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+            <div class="col-xl-4 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
                 <div class="card card-tel border-tel h-100 py-2">
                     <div class="card-body card-body-tel">
                         <div class="row no-gutters align-items-center">
@@ -263,7 +263,7 @@
             </div>
 
             <!-- BPLRT -->
-            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+            <div class="col-xl-4 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
                 <div class="card card-lrt border-lrt h-100 py-2">
                     <div class="card-body card-body-lrt">
                         <div class="row no-gutters align-items-center">
@@ -289,7 +289,7 @@
             </div>
 
             <!-- SKPGLRT -->
-            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+            <div class="col-xl-4 col-md-6 mb-4 wow fadeInUp" data-wow-delay="300ms">
                 <div class="card card-lrt border-lrt h-100 py-2">
                     <div class="card-body card-body-lrt">
                         <div class="row no-gutters align-items-center">
@@ -344,53 +344,82 @@
 
         <!-- Recent Incidents -->
         <div class="row row-ri">
-            <div class="col-12">
-                <div class="breadcrumb-content text-center">
-                    <!-- <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item-aag">Home
-                            </li>
-                            <li class="breadcrumb-item-aag active" aria-current="page">At a glance</li>
-                        </ol>
-                    </nav> -->
-                    <h2 class="page-title">Recent Incidents</h2>
+            <div class="accordion wow fadeInUp" id="accordTrains" data-wow-delay="300ms">
+                <div class="alert alert-do alert-info alert-dismissible fade show" role="alert"
+                    style="margin-bottom: 2em; cursor: default;">
+                    <i class="fa-solid fa-circle-info"></i>&nbsp; <b>Delays Overview & Recent Incidents are updated
+                        separately.</b>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
-            </div>
 
-            <div class="card-ri-active border-primary mb-4" style="max-width: 30.5rem;">
-                <div class="card-header-ri-active"><i class="fa-solid fa-sparkles"></i> 11/05/2025</div>
-                <div class="card-body text-primary">
-                    <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                    <p class="card-text">Due to a track point fault, please expect an additional 10mins train
-                        travel time between #Yishun and #Sembawang. Free regular bus service is available between
-                        #Yishun and #Woodlands.</p>
+                <div class="accordion-item">
+                    <h2 class="accordion-header " id="headingSMRT">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseSMRT" aria-expanded="true" aria-controls="collapseSMRT">
+                            <h2><img src="img/core-img/stl.png" id="ops-smrt" alt="SMRTT" width="150px"></h2>
+                        </button>
+                    </h2>
+                    <div id="collapseSMRT" class="accordion-collapse" aria-labelledby="headingSMRT"
+                        data-bs-parent="#accordTrains">
+                        <div class="accordion-body">
+                            <!-- <p class="mb-0">
+                        <b>No Reported Incidents</b>
+                    </p> -->
+                            <p class="mb-0">
+                                <b>- <a href="https://x.com/SMRT_Singapore/status/1914816349135888488">Apr
+                                        23:</a></b><br>
+                                [EWL]: Due to a track point fault, pls add additional 10mins train travel time between
+                                #Tampines
+                                and #PasirRis. Free regular bus service is available between #Tampines and #PasirRis.
+                            </p>
+                            <hr>
+                            <p class="mb-0">
+                                <b>- <a href="https://x.com/SMRT_Singapore/status/1912346685872988215">Apr
+                                        16:</a></b><br>
+                                [NSL]: Due to a track fault, pls add 15mins train travel time from #ToaPayoh to #Bishan
+                                towards
+                                #JurongEast. Free regular bus is available between #ToaPayoh and #Bishan.
+                            </p>
+                            <hr>
+                            <p class="mb-0">
+                                <b>- <a href="https://x.com/SMRT_Singapore/status/1908029621167382639">Apr
+                                        4:</a></b><br>
+                                [EWL]: Due to a track fault, please expect an additional 20mins of travelling time
+                                between
+                                #Queenstown and #BoonLay. Shuttle train are available between #Clementi and #JurongEast
+                                and
+                                #JurongEast and #Lakeside. Free regular bus is available between #BuonaVista and
+                                #BoonLay.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card-ri border-secondary mb-4" style="max-width: 30.5rem;">
-                <div class="card-header-ri"><i class="fa-solid fa-clock-rotate-left"></i> 23/04/2025</div>
-                <div class="card-body text-secondary">
-                    <img src="img/caplets/EWLCap.png" alt="EWL" width="55px" style="padding-bottom: 1em;">
-                    <p class="card-text">Due to a track point fault, pls add additional 10mins train travel time between
-                        #Tampines and #PasirRis. Free regular bus service is available between #Tampines and #PasirRis.
-                    </p>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header " id="headingSBST">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseSBST" aria-expanded="false" aria-controls="collapseSBST">
+                            <h2><img src="img/core-img/sbstl.png" id="ops-sbst" alt="sbstl" width="150px"></h2>
+                        </button>
+                    </h2>
+                    <div id="collapseSBST" class="accordion-collapse collapse" aria-labelledby="headingSBST"
+                        data-bs-parent="#accordTrains">
+                        <div class="accordion-body">
+                            <p class="mb-0">
+                                <b>No Reported Incidents</b>
+                            </p>
+                            <!-- <p class="mb-0">
+                        <b>- <a href="https://x.com/SBSTransit_Ltd/status/1888715397228380474">Feb
+                                10:</a></b><br>
+                        NEL Service is delayed due to a Signaling Fault. Additional travel time of about 10 minutes may
+                        be expected. We are sorry for the inconvenience caused.
+                    </p> -->
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card-ri border-primary mb-4" style="max-width: 30.5rem;">
-                <div class="card-header-ri"><i class="fa-solid fa-clock-rotate-left"></i> 16/04/2025</div>
-                <div class="card-body text-primary">
-                    <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                    <p class="card-text">Due to a track fault, pls add 15mins train travel time from #ToaPayoh to
-                        #Bishan towards #JurongEast. Free regular bus is available between #ToaPayoh and #Bishan.</p>
-                </div>
-            </div>
-            <!-- Arrow Button -->
-            <div class="d-flex align-items-center justify-content-end" style="width: auto;">
-                <button class="btn btn-outline-primary ms-3" title="See more incidents">
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
+
             </div>
         </div>
-
 
     </section><!-- End Hero -->
 
@@ -439,7 +468,7 @@
     <script src="js/default-assets/active.js"></script>
 
     <!-- Page level plugins -->
-
+    
 
     <!-- Page level custom scripts -->
     <!-- <script src="overview/delays-overview-both.js"></script> -->
