--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-breakpoints.css">
@@ -346,48 +347,88 @@
         <div class="row row-ri">
             <div class="col-12">
                 <div class="breadcrumb-content text-center">
-                    <!-- <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item-aag">Home
-                            </li>
-                            <li class="breadcrumb-item-aag active" aria-current="page">At a glance</li>
-                        </ol>
-                    </nav> -->
                     <h2 class="page-title">Recent Incidents</h2>
                 </div>
             </div>
+            <div class="col-12">
+                <!-- Swiper -->
+                <div class="swiper" id="ri-swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="card-ri card-ri-active border-primary mb-4">
+                                <div class="card-header-ri-active">
+                                    <i class="fa-solid fa-sparkles" style="font-size: 20px;"></i>&nbsp; 11/05/2025
+                                </div>
+                                <div class="card-body text-primary">
+                                    <img src="img/caplets/NSLCap.png" alt="NSL" width="55px"
+                                        style="padding-bottom: 1em;">
+                                    <p class="card-text">Due to a track point fault, please expect an additional 10mins
+                                        train
+                                        travel time between #Yishun and #Sembawang. Free regular bus service is
+                                        available between
+                                        #Yishun and #Woodlands.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card-ri border-secondary mb-4">
+                                <div class="card-header-ri">
+                                    <i class="fa-solid fa-clock-rotate-left"></i>&nbsp; 23/04/2025
+                                </div>
+                                <div class="card-body text-secondary">
+                                    <img src="img/caplets/EWLCap.png" alt="EWL" width="55px"
+                                        style="padding-bottom: 1em;">
+                                    <p class="card-text">Due to a track point fault, pls add additional 10mins train
+                                        travel time between
+                                        #Tampines and #PasirRis. Free regular bus service is available between #Tampines
+                                        and #PasirRis.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card-ri border-primary mb-4">
+                                <div class="card-header-ri">
+                                    <i class="fa-solid fa-clock-rotate-left"></i>&nbsp; 16/04/2025
+                                </div>
+                                <div class="card-body text-primary">
+                                    <img src="img/caplets/NSLCap.png" alt="NSL" width="55px"
+                                        style="padding-bottom: 1em;">
+                                    <p class="card-text">Due to a track fault, pls add 15mins train travel time from
+                                        #ToaPayoh to
+                                        #Bishan towards #JurongEast. Free regular bus is available between #ToaPayoh and
+                                        #Bishan.</p>
+                                </div>
+                            </div>
+                        </div>
 
-            <div class="card-ri-active border-primary mb-4" style="max-width: 30.5rem;">
-                <div class="card-header-ri-active"><i class="fa-solid fa-sparkles"></i> 11/05/2025</div>
-                <div class="card-body text-primary">
-                    <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                    <p class="card-text">Due to a track point fault, please expect an additional 10mins train
-                        travel time between #Yishun and #Sembawang. Free regular bus service is available between
-                        #Yishun and #Woodlands.</p>
+                        <div class="swiper-slide">
+                            <div class="card-ri border-primary mb-4">
+                                <div class="card-header-ri">
+                                    <i class="fa-solid fa-clock-rotate-left"></i>&nbsp; 16/04/2025
+                                </div>
+                                <div class="card-body text-primary">
+                                    <img src="img/caplets/NSLCap.png" alt="NSL" width="55px"
+                                        style="padding-bottom: 1em;">
+                                    <p class="card-text">Due to a track fault, pls add 15mins train travel time from
+                                        #ToaPayoh to
+                                        #Bishan towards #JurongEast. Free regular bus is available between #ToaPayoh and
+                                        #Bishan.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- Add Arrows -->
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <!-- Add Pagination (optional) -->
+                    <!-- <div class="swiper-pagination"></div> -->
                 </div>
-            </div>
-            <div class="card-ri border-secondary mb-4" style="max-width: 30.5rem;">
-                <div class="card-header-ri"><i class="fa-solid fa-clock-rotate-left"></i> 23/04/2025</div>
-                <div class="card-body text-secondary">
-                    <img src="img/caplets/EWLCap.png" alt="EWL" width="55px" style="padding-bottom: 1em;">
-                    <p class="card-text">Due to a track point fault, pls add additional 10mins train travel time between
-                        #Tampines and #PasirRis. Free regular bus service is available between #Tampines and #PasirRis.
-                    </p>
+                <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
+                    <a href="./about.html" class="btn pw-btn btn-2 mt-15">View Past Incidents &nbsp;<i
+                            class="fa-solid fa-arrow-right"></i></a>
                 </div>
-            </div>
-            <div class="card-ri border-primary mb-4" style="max-width: 30.5rem;">
-                <div class="card-header-ri"><i class="fa-solid fa-clock-rotate-left"></i> 16/04/2025</div>
-                <div class="card-body text-primary">
-                    <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                    <p class="card-text">Due to a track fault, pls add 15mins train travel time from #ToaPayoh to
-                        #Bishan towards #JurongEast. Free regular bus is available between #ToaPayoh and #Bishan.</p>
-                </div>
-            </div>
-            <!-- Arrow Button -->
-            <div class="d-flex align-items-center justify-content-end" style="width: auto;">
-                <button class="btn btn-outline-primary ms-3" title="See more incidents">
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
             </div>
         </div>
 
@@ -435,6 +476,9 @@
         crossorigin="anonymous"></script>
 
     <script src="js/pw.bundle.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="js/swiper-ri.js"></script>
 
     <script src="js/default-assets/active.js"></script>
 
