--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                 <div class="swiper-pagination"></div>
             </div>
             <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                <a href="./about.html" class="btn pw-btn btn-2 mt-15">See All &nbsp;<i
+                <a href="./past-records/past-records.html" class="btn pw-btn btn-2 mt-15">See All &nbsp;<i
                         class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
