--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
                                     <a href="mrt-lines/nsl.html">North-South Line</a>
                                 </div>
                                 <!-- Days -->
-                                <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-04-16"></div>
+                                <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-05-11"></div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     since last reported delay</div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;<span id="nsl-last-delay"
-                                        data-last-delay="2025-04-16"></span>
+                                        data-last-delay="2025-05-11"></span>
                                 </div>
                             </div>
                             <div class="col-auto">
@@ -463,7 +463,7 @@
         </script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="js/theme-index.js"></script>
+    <script src="js/index.js"></script>
 
     <script src="js/jquery.min.js"></script>
 
