2025-06 Feature Update for Version Next (5.0.x)

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <div class="row row-ri">
             <div class="col-12">
                 <div class="breadcrumb-content text-center">
-                    <h2 class="page-title wow fadeInUp" data-wow-delay="100ms">Past Incidents</h2>
+                    <h2 class="page-title wow fadeInUp" data-wow-delay="100ms">Recent Incidents</h2>
                 </div>
             </div>
             <div class="slide-container swiper">
@@ -364,8 +364,17 @@
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
                                 </a>
-                                <p class="card-text">Track Point Fault - Additional 10mins
-                                    train travel time between #Yishun and #Sembawang.</p>
+
+                                <p class="card-text-ri" style="font-size: 22px; font-weight: bold;">
+                                    <i class="fa-solid fa-train-track"></i>&nbsp; Track Point Fault<br>
+                                </p>
+                                <p class="card-text-ri">
+                                    <i class="fa-solid fa-clock"></i>&nbsp; Additional <b>10 mins</b> travel time <br>
+                                </p>
+                                <p class="card-text-ri">
+                                    <i class="fa-solid fa-location-dot"></i>&nbsp; Between Yishun and Sembawang
+                                </p>
+
                             </div>
                         </div>
                         <!-- Card 2 -->
@@ -379,8 +388,17 @@
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
                                 </a>
-                                <p class="card-text"> Track Point Fault - Additional 10mins train travel
-                                    time between #Tampines and #PasirRis.</p>
+
+                                <p class="card-text-ri" style="font-size: 22px; font-weight: bold;">
+                                    <i class="fa-solid fa-train-track"></i>&nbsp; Track Point Fault<br>
+                                </p>
+                                <p class="card-text-ri">
+                                    <i class="fa-solid fa-clock"></i>&nbsp; Additional <b>10 mins</b> travel time <br>
+                                </p>
+                                <p class="card-text-ri">
+                                    <i class="fa-solid fa-location-dot"></i>&nbsp; Between Tampines and Pasir Ris
+                                </p>
+
                             </div>
                         </div>
                         <!-- Card 3 -->
@@ -394,10 +412,18 @@
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
                                 </a>
-                                <p class="card-text" style="padding-right: 40px;">
-                                    Track Fault - Additional 15 mins travelling time from
-                                    #ToaPayoh to #Bishan towards #JurongEast.
+
+                                <p class="card-text-ri" style="font-size: 22px; font-weight: bold;">
+                                    <i class="fa-solid fa-train-track"></i>&nbsp; Track Fault<br>
                                 </p>
+                                <p class="card-text-ri">
+                                    <i class="fa-solid fa-clock"></i>&nbsp; Additional <b>15 mins</b> travel time <br>
+                                </p>
+                                <p class="card-text-ri">
+                                    <i class="fa-solid fa-location-dot"></i>&nbsp; Between Toa Payoh and Bishan towards
+                                    Jurong East
+                                </p>
+
                             </div>
                         </div>
                         <!-- Card 4 -->
@@ -411,10 +437,17 @@
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
                                 </a>
-                                <p class="card-text" style="padding-right: 40px;">
-                                    Track Fault - Additional 20mins of
-                                    travelling time between #Queenstown and #BoonLay.
+
+                                <p class="card-text-ri" style="font-size: 22px; font-weight: bold;">
+                                    <i class="fa-solid fa-train-track"></i>&nbsp; Track Fault<br>
                                 </p>
+                                <p class="card-text-ri">
+                                    <i class="fa-solid fa-clock"></i>&nbsp; Additional <b>20 mins</b> travel time <br>
+                                </p>
+                                <p class="card-text-ri">
+                                    <i class="fa-solid fa-location-dot"></i>&nbsp; Between Queenstown and BoonLay
+                                </p>
+
                             </div>
                         </div>
                     </div>
@@ -428,7 +461,7 @@
                 <div class="swiper-pagination"></div>
             </div>
             <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                <a href="./past-records/past-records.html" class="btn pw-btn btn-2 mt-15">See All &nbsp;<i
+                <a href="./past-records/past-records.html" class="btn pw-btn btn-2 mt-15">Incident History &nbsp;<i
                         class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
@@ -436,19 +469,12 @@
     </section>
 
 
-
     <footer class="footer-area">
-        <div class="container container-xxl">
-            <div class="row">
-                <div class="col-12">
-                    <div class="footer-content d-flex align-items-center justify-content-center">
-
-                        <div class="copywrite-text">
-                            <p>
-                                Data is obtained through each operator's X/Facebook page
-                            </p>
-                        </div>
-                    </div>
+        <div class="container">
+            <div class="footer-content d-flex flex-column align-items-center text-center">
+                <!-- Copywrite Text -->
+                <div class="copywrite-text">
+                    <p>Data is obtained through each operator's X/Facebook page</p>
                 </div>
             </div>
         </div>
