--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 
 <body>
 
+    <!-- Preloader Section -->
     <div id="preloader">
         <div class="loader"></div>
+        <p id="preloader-text">Just a moment...</p>
     </div>
 
 
@@ -480,26 +482,24 @@
         </div>
     </footer>
 
-    <!-- Modular DIVs -->
-    <script> w3IncludeHTML(); </script>
 
     <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
         data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
+
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/index.js"></script>
 
+    <script src="overview/days-overview.js"></script>
+
     <script src="js/jquery.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
+    <script src="js/popper.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <script src="js/pw.bundle.js"></script>
 
@@ -508,13 +508,8 @@
 
     <script src="js/default-assets/active.js"></script>
 
-    <!-- Page level plugins -->
+    <script src="js/preloader.js"></script>
 
-
-    <!-- Page level custom scripts -->
-    <!-- <script src="overview/delays-overview-both.js"></script> -->
-
-    <script src="overview/days-overview.js"></script>
 
 
 </body>
