2025-06 Feature Update for Version Next (5.0.x)

--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -42,8 +42,8 @@
         </label>
 
         <nav class="navbar navbar-mobile">
-            <a href="#" class="nav-item active">Home</a>
-            <a href="../statistics/statistics.html" class="nav-item">Statistics</a>
+            <a href="../index.html" class="nav-item">Home</a>
+            <a href="../statistics/statistics.html" class="nav-item active">Statistics</a>
             <a href="../past-records/past-records.html" class="nav-item">Past Records</a>
             <a href="../our-networks.html" class="nav-item">Networks</a>
             <a href="#" class="nav-item">
