--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="uptime-bars uptime-bars-30 d-flex align-items-end"></div>
                         <div class="d-flex justify-content-between mt-2" style="font-size:0.9em;">
                             <span class="text-muted days-label" id="uptime-days-label">90 days ago</span>
-                            <span class="text-muted" id="data-date">18 May 2025</span>
+                            <span class="text-muted" data-date="2025-05-18" id="data-date"></span>
                         </div>
                     </div>
                 </div>
